packages/jupyter-chat/style/chat.css
/*
 * Copyright (c) Jupyter Development Team.
 * Distributed under the terms of the Modified BSD License.
 */

.jp-chat-widget {
  min-height: 0;
  flex-grow: 1;
}

.jp-chat-message-container {
  position: relative;
}

.jp-chat-rendered-message hr {
  color: #00000026;
  background-color: transparent;
}

.jp-chat-message .jp-RenderedHTMLCommon > :last-child {
  margin-bottom: 0;
}

/*
 * Selectors must be nested in `.jp-ThemedContainer` to have a higher
 * specificity than selectors in rules provided by JupyterLab.
 *
 * See: https://jupyterlab.readthedocs.io/en/latest/extension/extension_migration.html#css-styling
 * See also: https://github.com/jupyterlab/jupyter-ai/issues/1090
 */
.jp-ThemedContainer .jp-chat-welcome-message {
  padding: 0 1em;
}

.jp-ThemedContainer .jp-chat-rendered-message .jp-RenderedHTMLCommon {
  padding-right: 0;
}

.jp-ThemedContainer .jp-chat-rendered-message .jp-RenderedJSON {
  padding-left: 5px;
}

.jp-ThemedContainer .jp-chat-rendered-message .jp-RenderedMarkdown pre,
.jp-ThemedContainer .jp-chat-welcome-message .jp-RenderedMarkdown pre {
  background-color: var(--jp-cell-editor-background);
  overflow-x: auto;
  white-space: pre;
  margin: 0;
  padding: 4px 6px;
  border: var(--jp-border-width) solid var(--jp-cell-editor-border-color);
}

.jp-ThemedContainer .jp-RenderedMarkdown pre > code {
  background-color: inherit;
  overflow-x: inherit;
  white-space: inherit;
}

.jp-ThemedContainer .jp-RenderedHTMLCommon mjx-container {
  font-size: 119%;
}

.jp-chat-toolbar {
  visibility: hidden;
  position: absolute;
  right: 0;
  top: 0;
  font-size: var(--jp-ui-font-size0);
  color: var(--jp-ui-font-color3);
}

.jp-chat-toolbar:hover {
  cursor: pointer;
  color: var(--jp-ui-font-color2);
}

.jp-chat-message-container:hover .jp-chat-toolbar {
  visibility: visible;
}

.jp-chat-toolbar > .jp-ToolbarButtonComponent {
  margin-top: 0;
}

.jp-chat-navigation {
  position: absolute;
  right: 10px;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  min-width: 0;
}

.jp-chat-navigation-unread {
  border: solid 2px var(--jp-cell-inprompt-font-color);
}

.jp-chat-navigation::part(control) {
  padding: 0;
}

.jp-chat-navigation-top {
  top: 10px;
}

.jp-chat-navigation-top svg {
  transform: rotate(180deg);
}

.jp-chat-navigation-bottom {
  bottom: 120px;
}

.jp-chat-mention {
  border-radius: 4px;
  padding: 2px 0;
  font-weight: bold;
}

.jp-chat-sidepanel .jp-chat-open {
  flex: 1 1 0%;
  min-width: 0;
  max-width: fit-content;
}

/* Sidepanel styles */
.jp-chat-sidepanel {
  display: flex;
  flex-direction: column;
}

.jp-chat-sidepanel .jp-chat-add svg path.jp-icon3 {
  stroke: var(--jp-inverse-layout-color3);
  stroke-width: 2;
}

.jp-chat-sidepanel-widget {
  min-height: 0;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.jp-chat-sidepanel-widget-toolbar > .jp-chat-sidepanel-widget-title {
  display: block;
  align-content: center;
  flex: 1 1 0%;
  min-width: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  color: var(--jp-ui-font-color1);
  font-size: var(--jp-ui-font-size0);
  font-weight: bold;
}

